fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@ html {
   color: var(--main-text);
   max-width: 2000px;
   margin: 0 auto;
-  overflow-x: hidden;
+
   display: flex;
   flex-direction: column;
   align-items: center;
 
 }
+/* *{  overflow-x: hidden;} */
 
 body{
   margin: 0px;
